# SPoNetResearch

./: compute_single_mjp_batch.py  create_ws_dist_job_array.py  misc_analysis.py  pyproject.toml  run_full_wasserstein.py  wasserstein_analysis.py
clusterscripts/: create_networks.submit  create_ws_dist_job_array.py  getfromcluster.sh  test.submit  wasserstein_array.submit  wasserstein_difference.submit  wassersteintest.submit
code/: compute_single_mjp_batch.py  create_network.py  moment_convergence_rate_test.py  wassersteindistance.py  wassersteindistancetest.py  wassersteinplots.py
code/utils/: cluster_utils.py  computation_utils.py  network_utils.py  parameter_utils.py  sponet_utils.py
code/utils/computation/: computation_utils.py
code/wasserstein/: wasserstein.py
compute_scripts/: compute_single_mjp_batch.py  run_full_wasserstein.py
juliacode/: Manifest.toml  Project.toml  fast_gnp.jl  generate_graphs.jl  generate_networks.jl
pythoncode/: wassersteinplots.py
pythoncode/compute_scripts/: compute_single_mjp_batch.py  run_full_wasserstein.py
pythoncode/utils/: computation_utils.py  network_utils.py  parameter_utils.py
pythoncode/wasserstein/: wasserstein.py
tests/: wassersteindistancetest.py
utils/: network_utils.py
